--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,13 @@
 }
 
 html {
-  font-size: min(max(1rem, 4vw), 22px);
+  font-size: min(max(1rem, min(4vw, 4vh)), 24px);
 }
 
 body {
   font-family: Karmilla, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #222;
+  background-color: #222;
 }
 
 a {
@@ -37,6 +38,40 @@ a {
 
 h1, h2, h3, h4, h5 {
   font-family: Quicksand;
+}
+
+p {
+  margin: 0 0 0.5rem;
+}
+
+button, .button {
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  outline: none;
+}
+
+.button {
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  background-color: #222;
+  color: #fff;
+  padding: 1rem 1.5rem;
+  margin: 0.3rem;
+  border-radius: 0.2rem;
+  border: 2px #222 solid;
+  font-size: 1.1rem;
+}
+
+.button:hover,
+.button:focus {
+  background-color: transparent;
+  color: #222;
+}
+
+.button:active {
+  top: 1px;
 }
 
 /*******************************************************/
@@ -69,50 +104,134 @@ main {
   position: relative;
   width: 100%;
   display: grid;
-  grid-template: repeat(4, 1fr) / repeat(2, 1fr);;
+  grid-template: repeat(4, 1fr) / repeat(2, 1fr);
 }
 
 .tile {
+  position: relative;
   display: block;
   width: 100%;
   height: 100%;
   text-align: center;
-  padding: 1rem;
-  background-size: cover;
-  background-position: center;
+  color: #fff;
+  transform-style: preserve-3d;
+}
 
-  text-indent: -9999px;
+.tile .tile__back {
+  transform: rotateY(180deg);
+}
+
+.tile:hover {
+  animation: wiggle 0.3s ease-out 0s infinite alternate;
+}
+
+.tile.flipped {
+  animation: flip 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0s 1 forwards;
+}
+
+@keyframes wiggle {
+  from { transform: rotateY(0deg); }
+  to { transform: rotateY(15deg); }
+}
+
+@keyframes flip {
+  from { transform: rotateY(0deg); }
+  to { transform: rotateY(180deg); }
+}
+
+.tile__front,
+.tile__back {
+  position: absolute;
+  z-index: 9;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background-color: #333;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.tile__front img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.tile__content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding-top: min(max(1rem, 5vh), 6rem);
+  padding-bottom: min(max(1rem, 5vh), 6rem);
+  padding-left: min(max(1rem, 5vw), 6rem);
+  padding-right: min(max(1rem, 5vw), 6rem);
+}
+
+.tile .tile__content h2 {
+  flex: 1 0 100%;
+  margin: 0 0 0.5rem;
+  font-size: 1.3rem;
+}
+
+@media screen and (orientation: portrait) {
+  .kulturverein .tile__content > *,
+  .kaff .tile__content > * {
+    flex: 1 0 48%;
+  }
 }
 
 .freiraum {
-  background-color: #29A2C6;
-  background-image: url(/img/traumfabrik-musikprobenraeume.jpg);
   grid-row: span 2;
   grid-column: span 2;
 }
 
-.kulturverein {
+.freiraum .tile__back {
+  background-color: #29A2C6;
+  padding-bottom: 1rem;
+}
+
+.kulturverein, .kaff {
+  grid-column: span 2;
+}
+
+.kulturverein .tile__back {
   background-color: #EF597B;
-  background-image: url(/img/kulturverein-flyer.jpg);
-  grid-column: span 2;
+  padding-top: 2rem;
 }
 
-.kaff {
+.kaff .tile__back {
   background-color: #4FB544;
-  background-image: url(/img/kaff-im-dunkeln.jpg);
-  background-position: 50% 85%;
-  grid-column: span 2;
 }
 
-@media screen and (min-width: 650px) {
+.kaff img {
+  object-position: 50% 85%;
+}
+
+@media screen and (orientation: landscape) {
   .freiraum {
     grid-row: span 4;
     grid-column: span 1;
   }
 
+  .freiraum .tile__back {
+    padding-bottom: 0;
+    padding-right: 4rem;
+  }
+
   .kulturverein, .kaff {
     grid-row: span 2;
     grid-column: span 1;
+  }
+
+  .kulturverein .tile__back {
+    padding-top: 0;
   }
 }
 
@@ -120,9 +239,10 @@ main {
   position: absolute;
   top: 50%;
   left: 50%;
+  z-index: 99;
   transform: translate(-50%, -50%);
-  width: min(max(4rem, min(50vh, 50vw)), 12rem);
-  height: min(max(4rem, min(50vh, 50vw)), 12rem);
+  width: min(max(4rem, min(30vh, 30vw)), 12rem);
+  height: min(max(4rem, min(30vh, 30vw)), 12rem);
   border-radius: 50%;
   background-color: #F6A81C;
   display: flex;
@@ -132,7 +252,7 @@ main {
 }
 
 .logo h1 {
-  font-size: min(max(1rem, min(7vh, 7vw)), 1.6rem);
+  font-size: min(max(1rem, min(4.5vh, 4.5vw)), 1.6rem);
   font-weight: bold;
 }
 
