--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,13 @@ h1, h2, h3, h4, h5 {
 }
 
 p {
-  margin: 0 0 0.5rem;
+  margin: 0.5rem 0;
+}
+
+@media screen and (min-width: 800px) and (min-height: 800px) {
+  p {
+    margin: 1rem 0;
+  }
 }
 
 button, .button {
@@ -260,7 +266,7 @@ main {
 
 footer {
   display: block;
-  padding: 1rem;
+  padding: 1.5rem 1rem;
   text-align: center;
   background-color: #333;
 }
