--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,12 @@ body {
 }
 
 a {
-  color: #F6A81C;
+  color: #f6a81c;
   text-decoration: none;
+}
+
+a:hover {
+  color: #cc8f1e;
 }
 
 h1, h2, h3, h4, h5 {
@@ -72,8 +76,8 @@ button, .button {
 
 .button:hover,
 .button:focus {
-  background-color: transparent;
-  color: #222;
+  color: #fff;
+  background-color: transparent !important;
 }
 
 .button:active {
@@ -167,6 +171,12 @@ main {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  filter: grayscale(0.6);
+  transition: filter .3s ease-out;
+}
+
+.tile:hover .tile__front img {
+  filter: grayscale(0);
 }
 
 .tile__content {
@@ -199,8 +209,12 @@ main {
 }
 
 .freiraum .tile__back {
-  background-color: #29A2C6;
   padding-bottom: 1rem;
+}
+
+.freiraum .button {
+  background-color: #2698ba;
+  border-color: #2698ba;
 }
 
 .kulturverein, .kaff {
@@ -208,12 +222,17 @@ main {
 }
 
 .kulturverein .tile__back {
-  background-color: #EF597B;
   padding-top: 2rem;
 }
 
-.kaff .tile__back {
-  background-color: #4FB544;
+.kulturverein .button {
+  background-color: #ef597b;
+  border-color: #ef597b;
+}
+
+.kaff .button {
+  background-color: #49a63f;
+  border-color: #49a63f;
 }
 
 .kaff img {
@@ -268,7 +287,7 @@ footer {
   display: block;
   padding: 1.5rem 1rem;
   text-align: center;
-  background-color: #333;
+  background-color: #222;
 }
 
 footer a {
